Auto stash before merge of "main" and "origin/main"

--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -488,3 +488,14 @@
  	NOTE = {Preprint, \href{http://arxiv.org/abs/2211.15754}{\texttt{arXiv:2211.15754}}}, 
 	YEAR = {2022},
 }
+
+@book{MarklShniderStasheff,
+  title = {Operads in Algebra, Topology and Physics},
+  author = {Markl, Martin and Shnider, Steve and Stasheff, James D.},
+  year = {2002},
+  series = {Mathematical Surveys and Monographs},
+  volume = {96},
+  pages = {x+349},
+  publisher = {{American Mathematical Society}},
+  address = {{Providence, RI}}
+}
