--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -5516,14 +5516,13 @@ A sufficient condition for a tree $t$ to satisfy $|\LAD_t|=|\SUD_t|$ is for $rN$
 
 \section*{Aknowledgements}
 
-Hugh Thomas (everything started in Montr\'eal)
-Sylvie Corteel for hyperplane arrangements
-Saneblidze--Umble for useful correspondence
-Galashin (asked about characteristic polynomials). 
-Organizers of the Simon Center conference.
+We would like to thank Hugh Thomas, who first asked about the counts of facets of the $\LA$ diagonal and designed the first code to compute them, during a visit of GLA at the LACIM in Montr\'eal, in the summer of 2021.
+We are grateful to Sylvie Corteel for pointing out the relevance of the dual perspective for the purpose of counting, and to Samson Saneblidze and Ron Umble for useful correspondence.
+\Guillaume{Galashin (asked about characteristic polynomials). 
+Organizers of the Simon Center conference....}
 
-BDO was partially supported by the French ANR grants ALCOHOL (ANR-19-CE40-0006), CARPLO (ANR-20-CE40-0007), HighAGT (ANR-20-CE40-0016) and S3 (ANR-20-CE48-0010). 
 GLA would like to thank the Max Planck Insitute for Mathematics in Bonn where part of this work was carried out. 
+BDO was partially supported by the French ANR grants ALCOHOL (ANR-19-CE40-0006), CARPLO (ANR-20-CE40-0007), HighAGT (ANR-20-CE40-0016) and S3 (ANR-20-CE48-0010). 
 GLA and KS were supported by the Australian Research Council Future Fellowship FT210100256. 
 KS was supported by an Australian Government Research Training Program (RTP) Scholarship.
 VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788). 
