--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -4112,8 +4112,8 @@ Consequently, they are in bijection with the facets of the $\SU$ diagonal.
 The translation of these results for the $\LA$ diagonal is clear.
 One can use, the isomorphism $t(r\times r)$ as in the following example. 
 
-\begin{example}
-The first row of the following diagram contains a sequence of admissible $\SU$ subset shifts applied to the matrix encoding of the SCP $256|4|17|3\times 6|5|147|13$ (see \cref{ex:shift translation by theta} for other encodings of shifts acting on this element). 
+\begin{example}\label{ex:matrix shifts}
+The first row of the following diagram contains a sequence of admissible $\SU$ subset shifts applied to the matrix encoding of the SCP $256|4|17|3\times 6|5|147|13$. 
 The second row is the image of these shifts under the isomorphism $t(r\times r)$.
 \begin{center}
 {\footnotesize
@@ -4182,6 +4182,7 @@ The second row is the image of these shifts under the isomorphism $t(r\times r)$
 \end{tikzcd}
 }
 \end{center}
+Note that the shifts of this example are also isomorphic to those of \cref{ex:shift translation by theta}, under the isomorphism  $(rs\times rs)$.
 \end{example}
 
 %%%%%%%%%%%%%%%
